@@ -1,3 +1,7 @@
+28/6/12
+  Changed the desktop switcher to have buttons the width of the
+   desktop name instead of a uniform size
+
 25/6/12
   Send mouse clicks through to window when focusing
 
